--- a/app/src/sass/_custom.scss
+++ b/app/src/sass/_custom.scss
@@ -53,13 +53,19 @@ html {
 
     .track {
       &__body {
-        @extend .notification;
+        position: relative;
+        z-index: -1;
         font-weight: 400;
         margin: 0;
+        //margin-bottom: $unit * 2;
         padding: $unit $unit * 2;
         padding-right: 2.5rem;
         color: $color-track-text;
         background-color: $color-track;
+
+        &.has-tags {
+          padding-bottom: $unit * 2;
+        }
 
         &-time {
           font-weight: bolder;
@@ -70,25 +76,62 @@ html {
           opacity: 0.6;
         }
       }
-
-      margin-bottom: $unit * 4;
     }
   }
 
-  .tags {
-    transform: translateY(23%);
-    display: block;
-    margin-top: $unit;
+  .tag-list {
+    max-height: $unit * 3;
+    transform: translateY(-75%);
+    margin-bottom: $unit * 3;
   }
 
   .tag {
-    font-weight: 900;
     color: $color-tag-text;
     background-color: $color-tag;
+    font-weight: 900;
     padding-top: 0.2rem;
-    margin-bottom: 0;
+    margin: $unit;
+    margin-top: 0;
     display: inline-block;
     vertical-align: middle;
+    position: relative;
+
+    &-info {
+      border-radius: $unit !important;
+      position: absolute;
+      left: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+      opacity: 0;
+      transition: opacity $transition;
+      margin-left: $unit * 5;
+      padding: $unit $unit * 2;
+
+      color: $color-text;
+      background-color: black;
+      pointer-events: none;
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: $unit * -2;
+        height: $unit * 4;
+        width: $unit * 4;
+        z-index: -1;
+        transform: translateY(-50%) rotate(45deg);
+        background-color: black;
+      }
+    }
+
+    &:hover {
+      .tag-info {
+        display: block;
+        opacity: 1;
+        z-index: 100;
+      }
+    }
+
 
     .value {
       &::before {
@@ -104,7 +147,7 @@ html {
     transform: translateY(75%);
 
     .tag {
-      transition: 0.3s;
+      transition: $transition;
       background-color: $color-tag-dark;
 
       &:hover {
