wip tag input FE system

--- a/app/src/sass/_vars.scss
+++ b/app/src/sass/_vars.scss
@@ -40,7 +40,7 @@ $fullhd-enabled: false;
 // Update some of Bulma's component variables
 //$body-background-color: $beige-lighter;
 $control-border-width: 1.4px;
-$input-border-color: rgba($color-text, 0.33);
+$color-input-border: rgba($color-text, 0.33);
 $input-shadow: none;
 
 
