--- a/app/src/sass/_custom.scss
+++ b/app/src/sass/_custom.scss
@@ -37,19 +37,119 @@ html {
   .track-create {
     padding: $unit * 2;
     background-color: $color-track;
-    //position: fixed;
     top: $unit * 10;
     left: $unit * 4;
     right: $unit * 4;
     z-index: 10;
+    padding-bottom: 0;
+
+    &__tag {
+      display: flex;
+
+      &__row {
+        display: flex;
+        flex-grow: 1;
+        align-items: center;
+        overflow-x: auto;
+        position: relative;
+        background-color: $color-bg;
+        border-radius: $unit * 1.5;
+        border: $color-input-border solid $control-border-width;
+
+        &:hover {
+          border: $color-text solid $control-border-width;
+        }
+
+        &-input {
+          position: absolute;
+          z-index: 1;
+          top: 0;
+          left: 0;
+          height: 100%;
+          min-width: 100%;
+          opacity: 0;
+          color: $color-bg;
+
+          &-bg {
+            border-radius: $unit * 1.5;
+            position: absolute;
+            z-index: 1;
+            left: 0;
+            right: 0;
+            min-width: 100%;
+            height: 100%;
+            color: $color-bg;
+            background-color: $color-bg;
+          }
+        }
+
+        .tag {
+          position: relative;
+          z-index: 1;
+
+          &:first-of-type {
+            margin-left: $unit * 2;
+          }
+        }
+
+        &-text {
+          margin: 1px;
+          display: inline-block;
+          position: relative;
+          min-width: 7.5rem;
+          z-index: 2;
+
+          border: none;
+          color: $color-text;
+          background-color: $color-bg;
+          &::placeholder { color: rgba($color-text, 0.33); }
+          &:focus { outline: none; box-shadow: none; }
+        }
+      }
+    }
 
     .add {
       font-weight: bolder;
     }
+
+
+    // TBD
+    .tag-input {
+      width: 100%;
+      border: 1px solid #eee;
+      font-size: 0.9em;
+      height: 50px;
+      box-sizing: border-box;
+      padding: 0 10px;
+    }
+
+    //.tag-input__tag {
+    //  height: 30px;
+    //  float: left;
+    //  margin-right: 10px;
+    //  background-color: #eee;
+    //  margin-top: 10px;
+    //  line-height: 30px;
+    //  padding: 0 5px;
+    //  border-radius: 5px;
+    //}
+
+    //.tag-input__tag > span {
+    //  cursor: pointer;
+    //  opacity: 0.75;
+    //}
+
+    //.tag-input__text {
+    //  border: none;
+    //  outline: none;
+    //  font-size: 0.9em;
+    //  line-height: 50px;
+    //  background: none;
+    //}
   }
 
   .track-list {
-    margin-top: $unit * 3;
+    margin-top: $unit * 5;
 
     .track {
       &__body {
@@ -57,7 +157,6 @@ html {
         z-index: -1;
         font-weight: 400;
         margin: 0;
-        //margin-bottom: $unit * 2;
         padding: $unit $unit * 2;
         padding-right: 2.5rem;
         color: $color-track-text;
@@ -84,6 +183,20 @@ html {
     transform: translateY(-100%);
     margin-bottom: $unit * 2.5;
     padding: 0 $unit * 2;
+
+    &-recent {
+      margin-top: $unit * 2;
+      max-height: $unit * 3;
+
+      .tag {
+        transition: $transition;
+        background-color: $color-tag-dark;
+
+        &:hover {
+          background-color: $color-tag;
+        }
+      }
+    }
   }
 
   .tag {
@@ -139,21 +252,6 @@ html {
       &::before {
         opacity: 0.5;
         content: "#";
-      }
-    }
-  }
-
-  .tags-recent-list {
-    max-height: $unit;
-    margin-bottom: $unit * 3;
-    transform: translateY(75%);
-
-    .tag {
-      transition: $transition;
-      background-color: $color-tag-dark;
-
-      &:hover {
-        background-color: $color-tag;
       }
     }
   }
