add visual noise

--- a/app/src/sass/_vars.scss
+++ b/app/src/sass/_vars.scss
@@ -11,6 +11,7 @@ $background: #202835;
 
 $color-bg: #202835;
 $color-track: #2f3c4d;
+$color-track-light: #3a495e;
 $color-tag: $success;
 $color-tag-dark: #959e78;
 
