--- a/app/src/sass/_custom.scss
+++ b/app/src/sass/_custom.scss
@@ -166,6 +166,10 @@ html {
           opacity: 0.6;
         }
       }
+
+      &.is-light .track__body {
+        background-color: $color-track-light;
+      }
     }
   }
 
