--- a/app/src/sass/_helpers.scss
+++ b/app/src/sass/_helpers.scss
@@ -52,8 +52,27 @@
   }
 }
 
+// colours
 @each $color, $value in $colors {
   .is-border-#{$color} {
     border: $unit / 10 solid nth($value, 1);
+  }
+  .has-fill-#{$color} {
+    fill: nth($value, 1);
+  }
+}
+
+.icon {
+  &.small {
+    width: 1rem;
+    height: 1rem;
+  }
+  &.med {
+    width: 2.25rem;
+    height: 2.25rem;
+  }
+  &.large {
+    width: 3rem;
+    height: 3rem;
   }
 }
