--- a/app/src/sass/_custom.scss
+++ b/app/src/sass/_custom.scss
@@ -46,11 +46,8 @@ html {
   .track-create {
     padding: $unit * 2;
     background-color: $color-track;
-    top: $unit * 10;
-    left: $unit * 4;
-    right: $unit * 4;
-    z-index: 10;
-    padding-bottom: 0;
+    padding-bottom: $unit;
+    position: relative;
 
     &__tag {
       display: flex;
@@ -196,17 +193,18 @@ html {
       max-width: 100%;
     }
 
-    &-recent {
-      margin-left: $unit;
-      margin-top: $unit * 2.75;
-      white-space: nowrap;
-      max-height: $unit * 5;
+    &.recent {
+      .tag-list-content {
+        bottom: -1rem;
+      }
 
-      &-label {
+      .label {
+        display: inline-block;
         position: relative;
         top: $unit * -1;
         font-weight: 800;
         color: $color-tag-dark;
+        margin-right: $unit;
       }
 
       .tag {
