--- a/app/src/sass/_custom.scss
+++ b/app/src/sass/_custom.scss
@@ -125,14 +125,24 @@ html {
     .button-add {
       @extend .button;
       @extend .bubble;
+      transform: scale(0.85);
 
-      border: none;
-      margin-left: $unit * 2;
+      margin-left: $unit * 0.25;
       margin-top: $unit * 0.5;
+      margin-right: $unit * -1.5;
       font-weight: bolder;
+      border: none;
 
       color: $color-text;
       background-color: $success;
+
+      &::after {
+        content: '';
+        width: 1rem;
+        height: 1rem;
+        transform: rotateZ(45deg);
+        background-color: $color-text;
+      }
     }
   }
 
@@ -163,8 +173,8 @@ html {
       &-time {
         font-weight: bolder;
         position: absolute;
-        top: $unit * 0.75;
-        right: $unit * 1.5;
+        top: $unit * 0.5;
+        right: $unit * 2;
         z-index: 10;
         opacity: 0.66;
       }
