--- a/app/src/sass/_helpers.scss
+++ b/app/src/sass/_helpers.scss
@@ -60,7 +60,7 @@
 
 // colours
 @each $color, $value in $colors {
-  .is-border-#{$color} {
+  .has-border-#{$color} {
     border: $unit / 10 solid nth($value, 1);
   }
   .has-fill-#{$color} {
@@ -73,7 +73,11 @@
   transform: scale(0.85);
 }
 
+svg,
 .icon {
+  width: 1.75rem;
+  height: 1.75rem;
+
   &.small {
     width: 1rem;
     height: 1rem;
@@ -87,3 +91,4 @@
     height: 3rem;
   }
 }
+
