--- a/app/src/sass/_helpers.scss
+++ b/app/src/sass/_helpers.scss
@@ -59,10 +59,13 @@
 //}
 
 
-.row {
+.is-row {
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  &.center { justify-content: center; }
+  &.end { justify-content: end; }
 }
 
 // colours
